# Graph-AD

./: .gitattributes  .gitignore  LICENSE  README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: collector.rs  crypto.rs  main.rs
web/: home.html  index.html
web/css/: style.css
web/js/: crypto.js  dashboard-loader.js  shared-menu.js  utils.js
web/ux/: ActionList.js  DiagnosticCard.js  InfrastructureTree.js  IntroCard.js  Legend.js  OnboardingBanner.js  PedagogyCard.js  ResourceView.js  SidePanel.js  TeamsView.js  TechAccessView.js
web/views/: infrastructure.html  resources.html  teams.html  tech-access.html
