[package]
name    = "GraphAD"
version = "1.0.2"
edition = "2024"

[[bin]]
name = "graphad"
path = "src/main.rs"

[dependencies]
# Interface graphique native (WebView embarqué)
tauri = { version = "2", features = [] }

# Collecte Active Directory via LDAP natif + session Kerberos
ldap3 = { version = "0.12", features = ["gssapi"] }

# Runtime asynchrone — requis par ldap3 et Tauri
tokio = { version = "1", features = ["full"] }

# Chiffrement AES-256-CBC + HMAC-SHA-256 + PBKDF2
aes    = "0.9"
cbc    = { version = "0.2", features = ["alloc"] }
hmac   = "0.13"
sha2   = "0.11"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
rand   = "0.10"

# Sérialisation JSON
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Horodatages archives
chrono = { version = "0.4", features = ["clock"] }

# Logs structurés avec niveaux et rotation quotidienne
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Détection droits admin Windows (IsUserAnAdmin)
libloading = "0.9"

# Garantie que la clé AES soit effacée de la mémoire vive après usage
zeroize = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
